# rp2040-playground

./: .clangd  .gitignore  CMakeLists.txt  README.md  build_tool.bat
programs/heavy_test/: CMakeLists.txt
programs/heavy_test/code/: main.cpp
programs/heavy_test/puredata/: _main.pd
programs/heavyflop/: CMakeLists.txt
programs/heavyflop/code/: main.cpp
programs/heavyflop/heavy/: Heavy_flip_led.cpp  Heavy_flip_led.h  Heavy_flip_led.hpp  HvControlDelay.c  HvControlDelay.h  HvControlRandom.c  HvControlRandom.h  HvControlSlice.c  HvControlSlice.h  HvMath.h  HvUtils.h
programs/heavyflop/puredata/: flip_led.pd
programs/i2s_test/: CMakeLists.txt
programs/i2s_test/code/: main.cpp
tools/build_tool/: __main__.py  build_commands.py  constants.py
tools/build_tool/cmake/: pico_sdk_import.cmake
